--- a/avg_wiki.Rmd
+++ b/avg_wiki.Rmd
@@ -109,9 +109,15 @@ Avg_data_tsibble <- Avg_data %>% as_tsibble(index = date)
 head(Avg_data_tsibble)
 
 Avg_data_tsibble %>%
-  autoplot()
+  autoplot() +
+  labs(title = "Average Wikipedia Page Visits",
+       x = "Dates",
+       y = "Average Page Visits")
 
-ACF(Avg_data_tsibble) %>% autoplot() # lag on 1,3,4
+# lag on 1,3,4
+ACF(Avg_data_tsibble) %>% 
+  autoplot() + 
+  labs(title = "Autocorrelation Plot for Average Wikipedia Page Visits") 
 ```
 
 ```{r}
@@ -197,16 +203,15 @@ model_list[["Model 1"]]$model <- keras_model_sequential() %>%
   layer_dropout(0.3) %>%
   layer_dense(units = 1)
 
-
 model_list[["Model 2"]]$model <- keras_model_sequential() %>%
-  layer_lstm(units = 50, input_shape = c(time_steps, features), return_sequences = TRUE) %>%
-  layer_lstm(units = 50, return_sequences = TRUE) %>%
-  layer_lstm(units = 50) %>%
+  layer_gru(units = 32, dropout = 0.1, recurrent_dropout = 0.5,return_sequences = TRUE, input_shape = c(time_steps, features)) %>% 
+  layer_gru(units = 64, activation = "relu",dropout = 0.1, recurrent_dropout = 0.5) %>% 
   layer_dense(units = 1)
 
 ```
   
 ```{r}
+# Compile the models
 model_list[["Model 1"]]$model %>%
   compile(loss = "mean_squared_error",
     optimizer = 'adam',
@@ -220,7 +225,7 @@ model_list[["Model 2"]]$model %>%
 
 
 ```{r train the model}
-
+# Fit training data into model
 model_list[["Model 1"]]$fit <- model_list[["Model 1"]]$model %>%
   fit(x_train,
       y_train,
@@ -235,24 +240,7 @@ model_list[["Model 2"]]$fit <- model_list[["Model 2"]]$model %>%
       batch_size = 128,
       validation_split = 0.2)
 
-pred_1 <- model_list[["Model 1"]]$model %>% predict(x_test)
-
-# Denormalised the predictions
-model_performance <- data.frame(Date = test_data$date,
-           Actual = test_data$avg_page_visit,
-           Pred_1 = pred_1) %>%
-  mutate(Pred_1 = (Pred_1 * scale_train[2]) + scale_train[1])
-
-
-model_performance %>%
-  pivot_longer(cols = c(Actual, Pred_1), names_to = "Type", values_to = "Avg_Page_Visits") %>%
-  ggplot()+
-  geom_line(aes(x = Date, y = Avg_Page_Visits, color = Type)) + 
-  labs(title = "Model Performance for Three Models")
-
 ```
-
-
 
 ```{r evaluation}
 evaluate_df <- function(model){
@@ -295,5 +283,24 @@ model_df %>%
 
 ```
 
+```{r}
+# Make Predictions 
+pred_1 <- model_list[["Model 1"]]$model %>% predict(x_test)
+pred_2 <- model_list[["Model 2"]]$model %>% predict(x_test)
 
+# Denormalised the predictions
+model_performance <- data.frame(Date = test_data$date,
+           Actual = test_data$avg_page_visit,
+           Pred_1 = pred_1,
+           Pred_2 = pred_2) %>%
+  mutate(Pred_1 = (Pred_1 * scale_train[2]) + scale_train[1],
+         Pred_2 = (Pred_2 * scale_train[2]) + scale_train[1])
+
+# Compare predictions 
+model_performance %>%
+  pivot_longer(cols = c(Actual, Pred_1,Pred_2), names_to = "Type", values_to = "Avg_Page_Visits") %>%
+  ggplot()+
+  geom_line(aes(x = Date, y = Avg_Page_Visits, color = Type)) + 
+  labs(title = "Model Performance for Three Models")
+```
 
