--- a/avg_wiki.Rmd
+++ b/avg_wiki.Rmd
@@ -30,10 +30,6 @@ train_df <- read_csv('filtered_train_2.csv')
 wiki_series <- as.numeric(wiki_df[2, -1])
 train_series <- as.numeric(train_df[2, -1])
 
-# Normalize the series
-wiki_series <- scale(wiki_series)
-train_series <- scale(train_series)
-
 # Initialize variables to store maximum correlation and its corresponding lag
 max_corr <- -1
 max_lag <- 0
@@ -96,6 +92,7 @@ get_dates <- wiki_df_with_dates %>%
   mutate(date = as.Date(date, format = "%Y-%m-%d")) %>%
   select(date)
 
+# Combine dates and the average page visits
 Avg_data <- data.frame(date = get_dates,
            avg_page_visit = col_means)
 
@@ -114,14 +111,42 @@ Avg_data_tsibble %>%
        x = "Dates",
        y = "Average Page Visits")
 
-# lag on 1,3,4
+# lag on 1,3,4, 8, 28
 ACF(Avg_data_tsibble) %>% 
   autoplot() + 
   labs(title = "Autocorrelation Plot for Average Wikipedia Page Visits") 
 ```
 
 ```{r}
-# Base Model ETS
+# Base Model ETS and ARIMA
+# Split the data into training and test sets
+base_train <- Avg_data_tsibble %>% filter(date < as.Date("2019-12-18"))
+base_test <- Avg_data_tsibble %>% filter(date >= as.Date("2019-12-18"))
+
+# ARIMA model
+fit_arima <- base_train %>%
+  model(ARIMA(avg_page_visit))
+
+# ETS model
+fit_ets <- base_train %>%
+  model(ETS(avg_page_visit))
+
+# Forecasting
+fc_arima <- fit_arima %>%
+  forecast(h = "30 days")
+
+fc_ets <- fit_ets %>%
+  forecast(h = "30 days")
+
+# Plotting
+data.frame(Date = base_test$date,
+           Actual = base_test$avg_page_visit,
+           ETS = fc_ets$.mean,
+           ARIMA = fc_arima$.mean) %>%
+  pivot_longer(cols = c(Actual, ETS, ARIMA), names_to = "Type", values_to = "Avg_Page_Visits") %>%
+  ggplot()+
+  geom_line(aes(x = Date, y = Avg_Page_Visits, color = Type)) + 
+  labs(title = "Model Performance for Base Models")
 
 
 ```
@@ -134,18 +159,19 @@ Avg_data <- Avg_data %>%
          lag3 = lag(avg_page_visit, n = 3),
          lag4 = lag(avg_page_visit, n = 4))
 
-# Replace NA to 0
-Avg_data$lag1 <- ifelse(is.na(Avg_data$lag1), 0, Avg_data$lag1)
-Avg_data$lag3 <- ifelse(is.na(Avg_data$lag3), 0, Avg_data$lag3)
-Avg_data$lag4 <- ifelse(is.na(Avg_data$lag4), 0, Avg_data$lag4)
-
 # Start from 2017-09-09
-Avg_data <- Avg_data[6:nrow(Avg_data),]
+Avg_data <- Avg_data[5:nrow(Avg_data),]
 
+
+```
+
+```{r}
 # Split into training and testing 
 # Forecast 30 days 
-train_data <- Avg_data[1:830,]
-test_data <- Avg_data[831:nrow(Avg_data),]
+train_data <- Avg_data[1:831,]
+test_data <- Avg_data[832:nrow(Avg_data),]
+tail(train_data)
+head(test_data)
 
 dim(train_data)
 dim(test_data)
@@ -158,28 +184,31 @@ scale_test <- c(mean(test_data$avg_page_visit), sd(test_data$avg_page_visit), me
 
 train_data_nom <- train_data %>%
   mutate(avg_page_visit = (avg_page_visit - scale_train[1]) / scale_train[2]) %>%
-  mutate(lag1 = (lag1 - scale_train[3])/ scale_train[4]) %>%
-  mutate(lag3 = (lag3 - scale_train[5])/ scale_train[6]) %>%
-  mutate(lag4 = (lag4 - scale_train[7])/ scale_train[8]) 
+  mutate(lag1 = (lag1 - scale_train[3])/ scale_train[4],
+         lag3 = (lag3 - scale_train[5])/ scale_train[6],
+         lag4 = (lag4 - scale_train[7])/ scale_train[8]) 
 
 test_data_nom <- test_data %>%
   mutate(avg_page_visit = (avg_page_visit - scale_test[1]) / scale_test[2]) %>%
-  mutate(lag1 = (lag1 - scale_test[3])/ scale_test[4]) %>%
-  mutate(lag3 = (lag3 - scale_test[5])/ scale_test[6]) %>%
-  mutate(lag4 = (lag4 - scale_test[7])/ scale_test[8])
+  mutate(lag1 = (lag1 - scale_test[3])/ scale_test[4],
+         lag3 = (lag3 - scale_test[5])/ scale_test[6],
+         lag4 = (lag4 - scale_test[7])/ scale_test[8])
+```
 
+```{r}
 # Reshape the data into the correct format
-reshape_array <- function(data, time_steps){
-  array(data, dim = c(nrow(data), time_steps, 3))
+reshape_array <- function(data, time_steps, features){
+  array(data, dim = c(nrow(data), time_steps, features))
 }
 
-time_steps <- 10    
-features <- 3 # lag1 lag3 lag4
+time_steps <- 1    
+features <- 3 # lag1 lag3 lag4 
 
 head(train_data)
 
-x_train <- reshape_array(as.matrix(train_data_nom[, 3:5]), time_steps)
-x_test <- reshape_array(as.matrix(test_data_nom[, 3:5]), time_steps)
+# X(Predictor Variables) and Y (Target Variables)
+x_train <- reshape_array(as.matrix(train_data_nom[, 3:5]), time_steps, features)
+x_test <- reshape_array(as.matrix(test_data_nom[, 3:5]), time_steps, features)
 y_train <- as.matrix(train_data_nom[,2])
 y_test <- as.matrix(test_data_nom[,2])
 
@@ -199,13 +228,16 @@ dim(y_test)
 model_list <- list()
 
 model_list[["Model 1"]]$model <- keras_model_sequential() %>%
-  layer_lstm(units = 50, input_shape = c(time_steps, features), return_sequences = TRUE) %>%
-  layer_lstm(units = 50, return_sequences = TRUE) %>%
+  layer_lstm(units = 150, input_shape = c(time_steps, features), return_sequences = TRUE) %>%
+  layer_dropout(rate = 0.5) %>%
+  layer_lstm(units = 100, return_sequences = TRUE) %>%
+  layer_dropout(rate = 0.4) %>%
   layer_lstm(units = 50) %>%
+  layer_dropout(rate = 0.3) %>%
   layer_dense(units = 1)
 
 model_list[["Model 2"]]$model <- keras_model_sequential() %>%
-  layer_gru(units = 32, dropout = 0.1, recurrent_dropout = 0.5,return_sequences = TRUE, input_shape = c(time_steps, features)) %>% 
+  layer_gru(units = 150, dropout = 0.1, recurrent_dropout = 0.5,return_sequences = TRUE, input_shape = c(time_steps, features)) %>% 
   layer_gru(units = 64, activation = "relu",dropout = 0.1, recurrent_dropout = 0.5) %>% 
   layer_dense(units = 1)
 
@@ -239,7 +271,9 @@ model_list[["Model 2"]]$fit <- model_list[["Model 2"]]$model %>%
       y_train,
       epochs = 50, # number of iteration
       batch_size = 128,
-      validation_split = 0.2)
+      validation_split = 0.2,
+      callbacks = callback_early_stopping(monitor ='val_loss',
+                                          patience = 10))
 
 ```
 
@@ -293,16 +327,20 @@ pred_2 <- model_list[["Model 2"]]$model %>% predict(x_test)
 # Denormalised the predictions
 model_performance <- data.frame(Date = test_data$date,
            Actual = test_data$avg_page_visit,
-           Pred_1 = pred_1,
-           Pred_2 = pred_2) %>%
-  mutate(Pred_1 = (Pred_1 * scale_train[2]) + scale_train[1],
-         Pred_2 = (Pred_2 * scale_train[2]) + scale_train[1])
+           ETS = fc_ets$.mean,
+           ARIMA = fc_arima$.mean,
+           Model_1 = pred_1,
+           Model_2 = pred_2) %>%
+  mutate(Model_1 = (Model_1 * scale_train[2]) + scale_train[1],
+         Model_2 = (Model_2 * scale_train[2]) + scale_train[1])
 
 # Compare predictions 
 model_performance %>%
-  pivot_longer(cols = c(Actual, Pred_1,Pred_2), names_to = "Type", values_to = "Avg_Page_Visits") %>%
+  pivot_longer(cols = c(Actual, ETS, ARIMA, Model_1, Model_2), names_to = "Type", values_to = "Avg_Page_Visits") %>%
   ggplot()+
   geom_line(aes(x = Date, y = Avg_Page_Visits, color = Type)) + 
-  labs(title = "Model Performance for Three Models")
+  labs(title = "Model Performance for Nueron Network Models")
+
+
 ```
 
